[package]
name = "stellaris-usb"
version = "0.1.0"
authors = ["Matt Mullins <mmullins@mmlx.us>"]
edition = "2018"
description = "A USB device implementation using the EK-LM4F120XL LaunchPad"

[dependencies]
embedded-hal = "0.2"
stellaris-launchpad = { path = "../stellaris-launchpad" }
cortex-m = "0.6"
cortex-m-rt = "0.6"
tm4c123x = { path = "../dslite2svd/crates/tm4c123x", features = [ "rt" ] }
usb-device = "0.2"

[profile.release]
lto = true
debug = true
opt-level = "s"
